# ana-language

./: CMakeLists.txt  LICENSE  README.md
Jit/: CMakeLists.txt  GarbageCollector.h  Interpreter.cpp  Interpreter.h  main.cpp
examples/: array_operations.ana  array_sort.ana  constant_folding.ana  constant_propagation.ana  dce_test.ana  factorial.ana  gc_test.ana  hello.ll  optimizer_test.ana  prime_numbers.ana  tree.ana
include/Bytecode/: Bytecode.h  BytecodeBuilder.h  BytecodeGenerator.h
include/Codegen/: CodeGen.h  Codegen.h  FunctionCodeGen.h  Optimizer.h
include/Interpreter/: GarbageCollector.h  Interpreter.h
include/Jit/: GarbageCollector.h  Interpreter.h  JitExecutor.h  JitInterpreter.h
include/Lexer/: Lexer.h  Token.h
include/Parser/: AST.h  Parser.h
include/Sema/: Scope.h  Sema.h  SemaVisitor.h
include/VirtualMachine/: GarbageCollector.h  Heap.h  VirtualMachine.h
src/: CMakeLists.txt  main.cpp
src/Bytecode/: Bytecode.cpp  BytecodeBuilder.cpp  BytecodeGenerator.cpp
src/Codegen/: CodeGen.cpp  Codegen.cpp  Optimizer.cpp
src/Interpreter/: Interpreter.cpp
src/Jit/: Interpreter.cpp  JIT.cpp  JitExecutor.cpp  JitInterpreter.cpp
src/Lexer/: Lexer.cpp
src/Optimizer/: Optimizer.cpp
src/Parser/: Parser.cpp
src/Sema/: Scope.cpp  Sema.cpp  SemaVisitor.cpp
src/VirtualMachine/: VirtualMachine.cpp
